LIST OF CHANGES

 - Following a release on 07/09/2024, see https://metacpan.org/dist/App-perlbrew/changes
   the checksum of the script served by https://install.perlbrew.pl had changed.
   https://install.perlbrew.pl is a redirect to raw
   https://github.com/gugod/App-perlbrew/blob/master/perlbrew-install, so
   the change originates from GitHub and can be trusted. Our CI flow compares
   the checksum of the downloaded script to the expected value. We now store
   an updated expected checksum value, which corresponds to the latest release.

release 52.2.3 (2024-05-24)
  - Removing Tidyp dependency from CI

release 52.2.2
  - Removed from MANIFEST previously deleted files

release 52.2.1
  - Dropped redundant CI build CPAN dependencies
  - Switch to Perlbrew to obtain multiple Perl versions

release 52.2.0
  - add bwa_mem2 as a tool in software_location
  
release 52.1.3
  - update version of github actions

release 52.1.2
  - change CI runner from Ubuntu 18.04 to ubuntu-latest

release 52.1.1
  - Make the npg_mail_cron_output find Perl libraries if they are deployed
    in the lib or lib/perl5 directory parallel to the bin directory. Currently
    the script, which is only used in crontabs, fails unless PERL5LIB is
    explicitly set in the environment.

release 52.1.0
  - added GATK version support to npg_common::roles::software_location

release 52.0.0
  - remove logger role, which is no longer in use
  - remove reference builder, which was moved to a different git package
  - delete unused test data
  - move from Travis CI to GitHub Actions
  - fix sort in t/10-seqchksum_merge.t to alleviate differences in locales 

release 51.3.1
  -  use GD dev package name that works for Travis CI

release 51.3.0
  - pin the Travis build to Ubuntu bionic

release 51.2
  - a parser for fastqcheck files is removed

release 51.1
  - add -f flag seqchksum_merge.pl script to allow specification of a file
      of globs to identify inputs